<resources>
    <string name="app_name">Yürüyüş Ritmini Kullanarak Kimliklendirme</string>
    <string name="recordButtonDefault">Kayda başla</string>
    <string name="xDefault">x:</string>
    <string name="yDefault">y:</string>
    <string name="zDefault">z:</string>
    <string name="timeDefault">zaman: 0.0</string>
    <string name="title_activity_train">TrainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="walkTextViewDefault">Yürüyüş kaydını başlatmak için \"yürü\" düğmesine basınız.</string>
    <string name="yuruyunuzDefaultValue">Yürüyünüz...</string>
</resources>