<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/recordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="236dp"
        android:clickable="true"
        android:onClick="startStopRecording"
        android:text="@string/recordButtonDefault"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewX"
        android:layout_width="107dp"
        android:layout_height="91dp"
        android:layout_marginTop="60dp"
        android:text="@string/xDefault"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/textViewY"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewY"
        android:layout_width="106dp"
        android:layout_height="92dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:text="@string/yDefault"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textViewZ"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewZ"
        android:layout_width="91dp"
        android:layout_height="90dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:text="@string/zDefault"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="118dp"
        android:layout_height="40dp"
        android:layout_marginBottom="200dp"
        android:text="@string/timeDefault"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewY"
        app:layout_constraintVertical_bias="0.393" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTime" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="324dp"
        android:layout_height="103dp"
        android:layout_marginTop="24dp"
        android:text="Kaydedilecek kişinin adını isim kısmına yazıp kayıt tuşuna basın. En az 10 saniye boyunca kayıt alın."
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <TextView
        android:id="@+id/kaydedildiTextView"
        android:layout_width="222dp"
        android:layout_height="90dp"
        android:layout_marginTop="56dp"
        android:text="kaydedilen kişi"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordButton" />
</androidx.constraintlayout.widget.ConstraintLayout>